2015-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl (backup): Create an archive directory
	  with the same permission as the data directory.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm (update): Allow 'error' for the slot
	  range.
	* perl/Amanda/Changer/robot.pm (update): Allow 'error' for the slot
	  range.
	* installcheck/Amanda_Changer_robot.pl: Fix.
	* man/xml-source/amanda-changers.7.xml: Add error keyword.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (set_error_to_unknown): New function
	  that allow the tapescan to reset all slots with given error.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Create timer once.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Abort a restore if application fail.

2015-04-21  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Retry on 429 or 503 error.

2015-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Makefile.am: Do not run the gnutar installcheck

2015-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/tape.m4: Add include for bsd.
	* device-src/device.c: Improve message.

2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: sort worker.

2015-02-18  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amadmin.8.xml: Document tape --days.
	* server-src/amadmin.c: Fix --days intape command.

2015-02-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.swg: Fix for swig-3.0.5

2015-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/common/common_functions.sh: Use systemctl to restart
	  xinetd.

2015-02-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Remove amdump file older than 30 days if
	  there is no corresponding log file.